tests/regression/success/array-literal-arrow2.lus


node top(in : int;) returns (out : int^2;)
let
  out = 0^2 -> [0, 0];
  --%PROPERTY out[0] = 0;
tel

