tests/regression/error/unguarded_pre_node_call_in_contract.lus
node sub (in: int) returns (out: int) ;
let
  out = pre in ;
tel

contract spec (in: int) returns (out: int) ;
let
  assume in > 0 ;
  guarantee out = ( 0 -> sub(in) ) ;
tel

node top (in: int) returns (out: int) ;
let
  out = 0 -> pre in ;
tel